--- a/lib/sencomp_web/templates/home/index.html.eex
+++ b/lib/sencomp_web/templates/home/index.html.eex
@@ -1,9 +1,21 @@
 <div class="editor">
-    <div
-        class="text-input is-noto"
-        contentEditable="true"
-        autofocus
-    >
-        Velká řeka málo kdy splývá v jeden pokoj.
+    <div>
+        <div class="hint" id="hint">
+            <div class="start-typing">
+                <%= gettext "Start typing here" %>
+                <br>
+            </div>
+            <div class="press-enter">
+                <%= gettext "Press enter when you're ready to mark sentence elements" %>
+            </div>
+        </div>
+        <div
+            id="editor-input"
+            class="text-input"
+            contentEditable="true"
+            spellcheck="false"
+        >
+            <%#  %>
+        </div>
     </div>
 <div>
