Trying to find comfortable data structure for representing the categories.

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -11,16 +11,11 @@
 /* Is inside the editor. Let's user type their sentence. */
 .editor .text-input {
     background-color: #f9f9f9;
-
-    /* Mobile sizes. */
-    font-size: 1.5rem;
-    line-height: 2.8rem;
-    min-width: 5rem;
 }
 
 .editor .hint {
     text-align: center;
-    color: grey;
+    color: #595959;
 }
 
 /* By default this element is hidden. It is shown with JS when the user starts
@@ -41,14 +36,6 @@ typing. */
 
 /* Tablet sizes. */
 @media only screen and (min-width: 768px) {
-    .editor .text-input {
-        margin: auto 1rem;
-        min-width: 10rem;
-        font-size: 2.5rem;
-        min-height: 2.5rem;
-        line-height: normal;
-    }
-
     .editor .hint {
         margin-bottom: 0.5rem;
     }
@@ -60,12 +47,6 @@ typing. */
 
 /* Desktop sizes. */
 @media only screen and (min-width: 1216px) {
-    .editor .text-input {
-        margin: auto 2rem;
-        font-size: 4rem;
-        min-height: 5.25rem;
-    }
-
     .editor .hint {
         margin-bottom: 1rem;
     }
