--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,9 +4,39 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 
-@import 'editor.css';
-
 body {
     font-family: 'Noto Serif', serif;
     margin: 0;
 }
+
+/* The div with the main sentence. */
+.sentence-size {
+    /* Mobile sizes. */
+    font-size: 1.5rem;
+    line-height: 2.8rem;
+    min-width: 5rem;
+}
+
+/* Tablet sizes. */
+@media only screen and (min-width: 768px) {
+    .sentence-size {
+        margin: auto 1rem;
+        min-width: 10rem;
+        font-size: 2.5rem;
+        min-height: 2.5rem;
+        line-height: normal;
+    }
+}
+
+/* Desktop sizes. */
+@media only screen and (min-width: 1216px) {
+    .sentence-size {
+        margin: auto 2rem;
+        font-size: 4rem;
+        min-height: 5.25rem;
+    }
+}
+
+@import 'editor.css';
+
+@import 'categorizer.css';
