--- a/assets/css/categorizer.css
+++ b/assets/css/categorizer.css
@@ -1,7 +1,3 @@
-.editor .categorizer {
-    display: none;
-}
-
 .editor .categorizer .is-categorizable {
     position: relative;
     display: inline-block;
@@ -14,14 +10,18 @@
     padding-bottom: 0.1rem;
     font-size: 105%;
 }
-/* The term is yet to be assigned a grammatical category. */
-.editor .categorizer .is-categorizable.is-uncategorized {
-    color: #595959;
-}
 
 .editor .categorizer .is-categorizable .category {
     font-size: 0.75rem;
     color: #595959;
+
+    /* Prevents the category from being selected. */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .editor .categorizer .is-categorizable:hover .category {
@@ -34,9 +34,9 @@
 }
 
 .editor .categorizer .is-categorizable .select-category {
-    text-align: left;
     position: absolute;
     font-size: 1rem;
+    text-align: left;
 
     /* Positions the select box in the middle of the word. */
     left: 50%;
@@ -62,6 +62,10 @@
  * Various different styles for categories. From the styling POV it's arbitrary
  * which category is represented by which styling.
  */
+
+.editor .categorizer .is-categorizable.is-cat-0 {
+    color: #595959;
+}
 
 .editor .categorizer .is-categorizable.is-cat-1 {
     border-bottom: 4px solid #fccff4;
