--- a/lib/sencomp_web/templates/home/index.html.eex
+++ b/lib/sencomp_web/templates/home/index.html.eex
@@ -1,16 +1,16 @@
 <div class="editor">
     <div>
         <div class="hint" id="hint">
-            <div class="start-typing">
-                <%= gettext "Start typing here" %>
-                <br>
+            <div class="start-categorizing fade-out">
+                <%= gettext "Hover, click or highlight the words to categorize them" %>
             </div>
-            <div class="press-enter hidden">
+            <div class="press-enter fade-out">
                 &#9166;
                 <%= gettext "Press enter when you're ready to categorize sentence elements" %>
             </div>
-            <div class="start-categorizing hidden">
-                <%= gettext "Hover, click or highlight the words to categorize them" %>
+            <div class="start-typing">
+                <%= gettext "Start typing here" %>
+                <br>
             </div>
         </div>
         <div
