--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,7 +10,7 @@ body {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* The div with the main sentence. */
@@ -42,7 +42,5 @@ body {
 }
 
 @import 'editor.css';
-
-@import 'categorizer.css';
 
 @import 'animations.css';
