Making the category selector stick to words

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,7 +2,7 @@
  * Import the font for sentence input.
  */
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
 body {
     font-family: 'Noto Serif', serif;
